test_integration/wacc_examples/valid/pairs/badLookup02.wacc
# try to directly print pair's second element

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
	pair(int, char) p = newpair(10, 'a') ;
  println snd p
end

# ORIGIONALLY THIS WAS A FAIL, BUT PAIR ELEMS ARE EXPRESSIONS NOW
